# 2D-Arcade-Game

./: .gitignore  CMakeLists.txt  Display.cpp  Enemy.cpp  Entity.cpp  Gameplay.cpp  HealingItems.cpp  MainMenu.cpp  MainMenu.h  Makefile  Player.cpp  Player.h  README.md  UNIT_TEST  UnitTesting.cpp  UnitTesting.h  displayTesting  game  main.cpp
include/: Display.h  Enemy.h  Entity.h  Gameplay.h  HealingItems.h  Projectile.h  Stats.h
src/: Display.cpp  Enemy.cpp  Gameplay.cpp  HealingItems.cpp  MainMenu.cpp  Player.cpp  Projectile.cpp  Stats.cpp  main.cpp
